桃憩一夏 - 更新圖片

--- a/iiot/taoyuang1000/collect/list.html
+++ b/iiot/taoyuang1000/collect/list.html
@@ -11,12 +11,19 @@
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(function(){
+            $('.go-01').click(function(){ $('html,body').animate({scrollTop:$('#go24').offset().top-20}, 800); });
+            $('.go-02').click(function(){ $('html,body').animate({scrollTop:$('#go25').offset().top-20}, 800); });
+        });
+    </script>
 </head>
 <body>
     <main class="collect-container">
         <section class="fixed-menu clearfix">
-            <p><a href="#go24">9/24 抽獎序號</a></p>
-            <p><a href="#go25">9/25 抽獎序號</a></p>
+            <p><a class="go-01">9/24 抽獎序號</a></p>
+            <p><a class="go-02">9/25 抽獎序號</a></p>
         </section>
         <section class="middle-container">
             <div class="event-content-top">
@@ -30,7 +37,7 @@
                 </div>
                 <!-- 9/24 第一場 -->
                 <div class="t-date" id="go24">
-                    <img src="images/inside-01.png" alt="9/24 抽獎序號">
+                    <img src="images/inside-t-01.png" alt="9/24 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">  
@@ -154,7 +161,7 @@
                 </ul>
                 <!-- 9/24 第二場 -->
                 <div class="t-date">
-                    <img src="images/inside-02.png" alt="9/24 抽獎序號">
+                    <img src="images/inside-t-02.png" alt="9/24 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">
@@ -278,7 +285,7 @@
                 </ul>
                 <!-- 9/24 第三場 -->
                 <div class="t-date">
-                    <img src="images/inside-03.png" alt="9/24 抽獎序號">
+                    <img src="images/inside-t-03.png" alt="9/24 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">
@@ -402,7 +409,7 @@
                 </ul>
                 <!-- 9/24 第四場 -->
                 <div class="t-date">
-                    <img src="images/inside-04.png" alt="9/24 抽獎序號">
+                    <img src="images/inside-t-04.png" alt="9/24 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">
@@ -526,7 +533,7 @@
                 </ul>
                 <!-- 9/24 第五場 -->
                 <div class="t-date">
-                    <img src="images/inside-05.png" alt="9/24 抽獎序號">
+                    <img src="images/inside-t-05.png" alt="9/24 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">
@@ -660,7 +667,7 @@
                     <p>1506</p>
                 </div>
                 <div class="t-date" id="go25">
-                    <img src="images/inside-06.png" alt="9/25 抽獎序號">
+                    <img src="images/inside-t-06.png" alt="9/25 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">
@@ -784,7 +791,7 @@
                 </ul>
                 <!-- 9/25 第二場 -->
                 <div class="t-date">
-                    <img src="images/inside-07.png" alt="9/25 抽獎序號">
+                    <img src="images/inside-t-07.png" alt="9/25 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">
@@ -908,7 +915,7 @@
                 </ul>
                 <!-- 9/25 第三場 -->
                 <div class="t-date">
-                    <img src="images/inside-08.png" alt="9/25 抽獎序號">
+                    <img src="images/inside-t-08.png" alt="9/25 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">
@@ -1032,7 +1039,7 @@
                 </ul>
                 <!-- 9/25 第四場 -->
                 <div class="t-date">
-                    <img src="images/inside-09.png" alt="9/25 抽獎序號">
+                    <img src="images/inside-t-09.png" alt="9/25 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">
@@ -1156,7 +1163,7 @@
                 </ul>
                 <!-- 9/25 第五場 -->
                 <div class="t-date">
-                    <img src="images/inside-10.png" alt="9/25 抽獎序號">
+                    <img src="images/inside-t-10.png" alt="9/25 抽獎序號">
                 </div>
                 <ul class="nb-content gift-list clearfix">
                     <li class="w100">
