quickclick - 調整後台細節
1.菜單商品 - 新增 hashtag 加入樣式(點選可移除)
2.菜單商品 - 照片新增預覽圖
3.菜單商品移除跳popup提醒顯示
4.整單加購 - 上次這支檔案好像沒更新到?囧
5.菜單列表 - 啟用中與選單層級順序調整(CSS)

--- a/quickclick/menu-new.html
+++ b/quickclick/menu-new.html
@@ -29,6 +29,7 @@
                 <input class="default" type="text" placeholder="搜尋關鍵字">
             </div>
             <a class="btn-batch-operation btn--primary-l">批次操作</a>
+            <a class="btn-menuadd-operation btn--primary-l" href="menu-new-1-menu-add.html">整單加購</a>
             <input class="btn-save btn--primary-xl " type="submit" value="儲存">
             <ul class="btn-menu-actions">
                 <li>
