--- a/quickclick/menu.html
+++ b/quickclick/menu.html
@@ -111,6 +111,9 @@
                     <p class="update">上次更新：2021-10-22 下午 3:00 · Amber Liu</p>
                 </div>
                 <div class="card">
+                    <div class="label-type">
+                        <p>啟用中</p>
+                    </div>
                     <div class="more-features">
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
