--- a/quickclick/popup-delete-product.html
+++ b/quickclick/popup-delete-product.html
@@ -11,6 +11,28 @@
     <script src="https://cdn.ckeditor.com/4.7.3/standard/ckeditor.js"></script>
 </head>
 <body>
+    <div class="mfp-bg"></div>
+    <div class="mfp-wrap">
+        <div class="mfp-container">
+            <div class="mfp-content">
+                <!-- popup 菜單刪除確認 -->
+                <section id="popup-delete-menu" class="white-popup mfp-hide popup-width-s">
+                    <div class="popup-container">
+                        <div class="top-title">
+                            <h4><span>商品刪除確認</span></h4>
+                        </div>
+                        <p class="text-remind">
+                            刪除就是刪除，無法復原的哦~
+                        </p>
+                        <div class="bottom-btn-tool">
+                            <input class="btn--primary-xl " type="submit" value="我知道">
+                        </div>
+                    </div>
+                    <button title="Close (Esc)" type="button" class="mfp-close">×</button>
+                </section>
+            </div>
+        </div>
+    </div>
     <main class="main-container">
         <p class="breadcrumb"><span>快一點</span> > <span>麥町吐司工房新莊中原店</span></p>
         <section class="top-content top-set-function clearfix">
@@ -55,7 +77,7 @@
                             <div class="arr arr-down"></div>
                             <input class="default" type="text" name="" value="主打套餐系列" placeholder="請填寫類別">
                             <div class="menu-tools">
-                                <a href="popup-delete-product.html"><i class="far fa-trash-alt"></i></a>
+                                <a href="#"><i class="far fa-trash-alt"></i></a>
                             </div>
                         </div>
                         <!-- 單品 -->
@@ -76,7 +98,7 @@
                                 </div>
                                 <div class="menu-tools">
                                     <a href="#"><i class="far fa-copy"></i></a>
-                                    <a href="popup-delete-product.html"><i class="far fa-trash-alt"></i></a>
+                                    <a href="#"><i class="far fa-trash-alt"></i></a>
                                 </div>
                             </div>
                             <div class="additional-content">
@@ -85,7 +107,7 @@
                                     <div class="arr"></div>
                                     <p class="product-name">甜點</p>
                                     <div class="menu-tools">
-                                        <a href="popup-delete-product.html"><i class="far fa-trash-alt"></i></a>
+                                        <a href="#"><i class="far fa-trash-alt"></i></a>
                                     </div>
                                 </div>
                             </div><div class="additional-content">
@@ -94,7 +116,7 @@
                                     <div class="arr"></div>
                                     <p class="product-name">沙拉</p>
                                     <div class="menu-tools">
-                                        <a href="popup-delete-product.html"><i class="far fa-trash-alt"></i></a>
+                                        <a href="#"><i class="far fa-trash-alt"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -104,7 +126,7 @@
                                     <div class="arr arr-down"></div>
                                     <p class="product-name">飲料</p>
                                     <div class="menu-tools">
-                                        <a href="popup-delete-product.html"><i class="far fa-trash-alt"></i></a>
+                                        <a href="#"><i class="far fa-trash-alt"></i></a>
                                     </div>
                                 </div>
                                 <div class="product">
@@ -144,7 +166,7 @@
                                 </div>
                                 <div class="menu-tools">
                                     <a href="#"><i class="far fa-copy"></i></a>
-                                    <a href="popup-delete-product.html"><i class="far fa-trash-alt"></i></a>
+                                    <a href="#"><i class="far fa-trash-alt"></i></a>
                                 </div>
                             </div>
                             <div class="text-add-product">
@@ -161,7 +183,7 @@
                             <div class="arr"></div>
                             <input class="default" type="text" name="" value="國王皇后的吐司＆三明治＆花生系列" placeholder="請填寫類別">
                             <div class="menu-tools">
-                                <a href="popup-delete-product.html"><i class="far fa-trash-alt"></i></a>
+                                <a href="#"><i class="far fa-trash-alt"></i></a>
                             </div>
                         </div>
                     </div>
@@ -171,7 +193,7 @@
                             <div class="arr"></div>
                             <input class="default" type="text" name="" value="飲品＆小點" placeholder="請填寫類別">
                             <div class="menu-tools">
-                                <a href="popup-delete-product.html"><i class="far fa-trash-alt"></i></a>
+                                <a href="#"><i class="far fa-trash-alt"></i></a>
                             </div>
                         </div>
                     </div>
@@ -181,7 +203,7 @@
                             <div class="arr"></div>
                             <input class="default" type="text" name="" value="Uber" placeholder="請填寫類別">
                             <div class="menu-tools">
-                                <a href="popup-delete-product.html"><i class="far fa-trash-alt"></i></a>
+                                <a href="#"><i class="far fa-trash-alt"></i></a>
                             </div>
                         </div>
                         <div class="text-add-category">
