--- a/quickclick/popup-choose-platform.html
+++ b/quickclick/popup-choose-platform.html
@@ -62,8 +62,14 @@
         </div>
     </div>
     <main class="main-container">
+        <p class="breadcrumb"><span>商店列表</span> > <span>菜單管理</span></p>
         <section class="top-content clearfix">
-            <h3 class="main-title">菜單管理</h3>
+            <h3 class="main-title">
+                <a href="store-list.html">
+                    <span><i class="fas fa-arrow-left"></i></span>
+                    返回商店列表
+                </a>
+            </h3>
             <a class="btn-products btn--primary-l">
                 <p>
                     <span><i class="fas fa-shopping-basket"></i></span>
