--- a/quickclick/popup-choose-store.html
+++ b/quickclick/popup-choose-store.html
@@ -26,6 +26,13 @@
                                     <input class="default" type="text" placeholder="搜尋商店ID或商店名稱">
                                 </div>
                             </div>
+                            <div class="copystore-switch clearfix">
+                                <div class="switch-type">
+                                    <input id="" name="" type="checkbox" checked="">
+                                    <label class="switch-button" for=""></label>
+                                </div>
+                                <label class="item-title">直接啟用<span class="note">勾選至複製菜單的商店，並直接發佈。</span></label>
+                            </div>
                             <div class="field-title field">
                                 <div class="option-list">
                                 </div>
@@ -206,8 +213,14 @@
         </div>
     </div>
     <main class="main-container">
+        <p class="breadcrumb"><span>商店列表</span> > <span>菜單管理</span></p>
         <section class="top-content clearfix">
-            <h3 class="main-title">菜單管理</h3>
+            <h3 class="main-title">
+                <a href="store-list.html">
+                    <span><i class="fas fa-arrow-left"></i></span>
+                    返回商店列表
+                </a>
+            </h3>
             <a class="btn-products btn--primary-l">
                 <p>
                     <span><i class="fas fa-shopping-basket"></i></span>
