CTBC-調整信用卡欄位為四格

--- a/ctbc-0919-pay/信用卡付款頁面.htm
+++ b/ctbc-0919-pay/信用卡付款頁面.htm
@@ -103,11 +103,18 @@
 							</label>
 						</div>
 						<div class="col-xs-12 col-md-8">
+
 								<div class="panform">
 									<!-- For VMJ -->
-									<img id="pansvg" src="%E4%BF%A1%E7%94%A8%E5%8D%A1%E4%BB%98%E6%AC%BE%E9%A0%81%E9%9D%A2_files/card.png" alt="">
-									<input type="tel" class="form-control pan-col-all" id="pan_num" name="pan_num" pattern="[0-9 ]*" autocomplete="off" onkeyup="setBlur(this)" onkeypress="setBlur(this)" onkeydown="setBlur(this)" placeholder="xxxx xxxx xxxx xxxx" maxlength="20">
+									<input type="tel" class="form-control pan-col-all" id="pan_num" name="pan_num" pattern="[0-9 ]*" autocomplete="off" onkeyup="setBlur(this)" onkeypress="setBlur(this)" onkeydown="setBlur(this)" placeholder="xxxx" maxlength="4">
+									<span>-</span>
+									<input type="tel" class="form-control pan-col-all" id="pan_num" name="pan_num" pattern="[0-9 ]*" autocomplete="off" onkeyup="setBlur(this)" onkeypress="setBlur(this)" onkeydown="setBlur(this)" placeholder="xxxx" maxlength="4">
+									<span>-</span>
+									<input type="tel" class="form-control pan-col-all" id="pan_num" name="pan_num" pattern="[0-9 ]*" autocomplete="off" onkeyup="setBlur(this)" onkeypress="setBlur(this)" onkeydown="setBlur(this)" placeholder="xxx" maxlength="4">
+									<span>-</span>
+									<input type="tel" class="form-control pan-col-all" id="pan_num" name="pan_num" pattern="[0-9 ]*" autocomplete="off" onkeyup="setBlur(this)" onkeypress="setBlur(this)" onkeydown="setBlur(this)" placeholder="xxxx" maxlength="4">
 								</div>
+
 						</div>
 					</div>
 					<!-- CVV -->
