--- a/ctbc-0919-pay/信用卡付款頁面.htm
+++ b/ctbc-0919-pay/信用卡付款頁面.htm
@@ -110,7 +110,7 @@
 									<span>-</span>
 									<input type="tel" class="form-control pan-col-all" id="pan_num" name="pan_num" pattern="[0-9 ]*" autocomplete="off" onkeyup="setBlur(this)" onkeypress="setBlur(this)" onkeydown="setBlur(this)" placeholder="xxxx" maxlength="4">
 									<span>-</span>
-									<input type="tel" class="form-control pan-col-all" id="pan_num" name="pan_num" pattern="[0-9 ]*" autocomplete="off" onkeyup="setBlur(this)" onkeypress="setBlur(this)" onkeydown="setBlur(this)" placeholder="xxx" maxlength="4">
+									<input type="tel" class="form-control pan-col-all" id="pan_num" name="pan_num" pattern="[0-9 ]*" autocomplete="off" onkeyup="setBlur(this)" onkeypress="setBlur(this)" onkeydown="setBlur(this)" placeholder="xxxx" maxlength="4">
 									<span>-</span>
 									<input type="tel" class="form-control pan-col-all" id="pan_num" name="pan_num" pattern="[0-9 ]*" autocomplete="off" onkeyup="setBlur(this)" onkeypress="setBlur(this)" onkeydown="setBlur(this)" placeholder="xxxx" maxlength="4">
 								</div>
