紅利桃子 - 新增活動項目 - 桃園咖啡節

--- a/iiot/peach/campaign.html
+++ b/iiot/peach/campaign.html
@@ -207,6 +207,11 @@
                                     <img src="images/img-event-09.png" alt="文化局 - 2022 地景藝術節 反應熱烈再加碼 現場報到拿 50點">
                                 </a>
                             </li>
+                            <li>
+                                <a class="tycg-photo" href="https://www.2022taoyuanfood.com.tw/" target="_blank">
+                                    <img src="images/img-event-10.png" alt="經發局 - 桃園咖啡節 闖關集章拿點數 最高可獲350點">
+                                </a>
+                            </li>
                         </ul>
                         <p class="text-remark">※ 以上活動辦法依各局處活動官網為準。<br>
                             ※ 各局處活動得獎者公布後，隔週三進行點數發放，註冊登入紅利桃子後即可查詢點數資訊。<br>
