集章頁 - 桃園大數據應用展  - 更新說明圖(活動地址)

--- a/iiot/lottery-interactive/index.html
+++ b/iiot/lottery-interactive/index.html
@@ -38,7 +38,7 @@
                         <img src="images/bg_seal-04.png" alt="企業數據力">
                     </div>
                 </div>
-                <img src="images/info-01.png" alt="活動期限、開放時間、活動地點、活動簡介、集章地點、兌換地點、獎品項目、注意事項">
+                <img src="images/info-01-1003.png" alt="活動期限、開放時間、活動地點、活動簡介、集章地點、兌換地點、獎品項目、注意事項">
             </div>
         </section>        
     </main>
