集章頁 - 桃園大數據應用展 - 新增全數兌換完的章

--- a/iiot/lottery-interactive/index.html
+++ b/iiot/lottery-interactive/index.html
@@ -21,6 +21,7 @@
             <div class="event-content">
                 <img src="images/seal-title.png" alt="任務集章卡?">
                 <div class="seal-content clearfix">
+                    <img class="all-ok" src="images/seal-all-done.png" alt="完成">
                     <div class="the-seal">
                         <img class="ok" src="images/seal-done.png" alt="完成">
                         <img src="images/bg_seal-01.png" alt="城市數據">
@@ -34,7 +35,7 @@
                         <img src="images/bg_seal-03.png" alt="桃園數據力">
                     </div>
                     <div class="the-seal">
-                        <!-- <img class="ok" src="images/seal-done.png" alt="完成"> -->
+                        <img class="ok" src="images/seal-done.png" alt="完成">
                         <img src="images/bg_seal-04.png" alt="企業數據力">
                     </div>
                 </div>
