紅利桃子 777 放大祭 - 活動頁更新錯別字"額"為"兒"

--- a/iiot/taoyuang1000/lottery777/index.html
+++ b/iiot/taoyuang1000/lottery777/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>紅利桃子 777 放大祭 | 點數消費抽大獎 | 週週抽77名幸運額獲得 777 點</title>
+    <title>紅利桃子 777 放大祭 | 點數消費抽大獎 | 週週抽77名幸運兒獲得 777 點</title>
     <meta name='description'content="" />
     <meta name='keywords' content="紅利桃子, 點數消費抽大獎, 紅利桃子,桃園, 777, 放大祭, 點數, 體驗, 市集,  TTPUSH" />
-    <meta property="og:title" content="紅利桃子 777 放大祭 | 點數消費抽大獎 | 週週抽77名幸運額獲得 777 點" />
+    <meta property="og:title" content="紅利桃子 777 放大祭 | 點數消費抽大獎 | 週週抽77名幸運兒獲得 777 點" />
     <meta property="og:url" content="#" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
@@ -25,7 +25,7 @@
         <section class="middle-container">
             <div class="event-content-top">
                 <img class="t1 wow bounce" data-wow-duration="2s" src="images/title-01.png" alt="紅利桃子777">
-                <img class="t2" src="images/subtitle-01.png" alt="點數消費抽獎序號">
+                <img class="t2" src="images/subtitle-01-1027.png" alt="點數消費抽獎序號">
             </div>
             <div class="event-content">
                 <div class="t-date">
